--- a/report/conclusions.tex
+++ b/report/conclusions.tex
@@ -8,10 +8,11 @@ address. HIP protocol not only solves the problem of separation
 of roles of the IP addresses, but can also be a secure mobility
 solution. There are many applications of HIP in modern networks -
 from establishing a secure channel between stationary network
-entities, to secure mobility solutions.
+entities, to secure mobile users.
 
-We have created a Python based implementation of HIP and experimented
-with it: (i) we have made several microbanchmarkings, and (ii)
+We have created a minimal Python-based implementation of HIP and 
+experimented with it: (i) we have made several microbanchmarkings, and (ii)
 we completed several rounds of stress tests of the solution (
 basically, we have made several concurrent connections to HIP
-server and measured duration of HIP base exchange).
+server and measured duration of HIP base exchange). In this work the 
+implementation of IPSec protocol was out of the scope. 
