--- a/report/experimental.tex
+++ b/report/experimental.tex
@@ -1,7 +1,12 @@
 \section{Experimental evaluation}
 \label{section:experiments}
 
-
+In this section we will discuss the performance related issues of our 
+HIPv2 implementation. We begin the discussion with the set of 
+microbanchmarkings. Thus, we first evaluate the perormance of ECDH and DH
+algorithms, then we switch to performance of RSA, DSA, and ECDSA signature
+algorithms, we conclude the discussion with the performance of various HMAC 
+algorithms.
 
 \begin{figure}
 	\includegraphics[width=0.5\textwidth]{graphics/puzzle_solution_perf.pdf}
@@ -48,4 +53,3 @@ to reduced key sizes.
 \label{tab:strength}
 \end{table}
 
-~\cite{dummy}
