--- a/report/background.tex
+++ b/report/background.tex
@@ -5,7 +5,7 @@ In this section we will describe basic background. First, we will
 discuss the problem of mobile Internet and introduce the Host Identity
 Protocol. We then move to the discussion of other layer 3 security protocols.
 We will conclude the section with the discussion of Elliptic Curves and
-a variant of Diffie-Hellman algorithm, which uses EC cryptographgy (ECC).
+a variant of Diffie-Hellman algorithm, which uses EC cryptography (ECC).
 
 \subsection{Dual role of IP}
 
@@ -45,7 +45,7 @@ use preshared keys and set of negotiated algorithms.
 
 {\bf Internet Key Exchange protocol (IKE)}
 
-{\bf Mobile TCP (mTCP)} There are a lot of solutoins for mobility support. 
+{\bf Mobile TCP (mTCP)} There are a lot of solutions for mobility support. 
 For sampling see Mobile IP, ROAMIP and Cellular IP.
 
 \subsection{Diffie-Hellman (DH) and Elliptic Curve DH}
@@ -92,7 +92,7 @@ $$\beta = (y_2-y_1)(x_2-x_1)^{-1}$$ Also, we can find $\upsilon$ as
 $$\upsilon=y_1-\beta x_1=y_2-\beta x_2$$
 
 In order to find the points that intersect the curve, we can substitute $y=\beta x+ \upsilon$
-into equation of an eliptic curve:
+into equation of an elliptic curve:
 
 $$(\beta x+ \upsilon)^2=x^3+ax+b$$
 
