--- a/report/paper.tex
+++ b/report/paper.tex
@@ -47,9 +47,10 @@ the IP address - locator and identifier. Using HIP protocol
 one can solve not only mobility problems, but also 
 establish authenticated secure channel. In this short 
 report we will introduce description of the implementation
-of HIP protocol using Python. We will also present the 
-microbanchmarking results for various cryptographic 
-primitives.
+of HIP and IPSec protocols using Python. We will also present the 
+microbanchmarking results for various cryptographic primitives,
+and present the results for overall performance of HIP and IPSec,
+which we implement in userspace using Python language.
 \end{abstract}
 \input intro.tex
 \input background.tex
