--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,2 +1,11 @@
 \section{Introduction}
 \label{section:introduction}
+
+Sometimes it is easier to implement prototypes in userspace 
+using high-level languages, such as Python or Java. In this 
+document we attempt to implement the Host Identity Protocol 
+version 2 using Python language. In the first part, we describe
+various security solutions, then we discuss some implementation
+details of the HIP protocol, and finally, in the last part
+of this work we discuss the performance of the HIP and IPSec 
+protocols.
