--- a/report/experimental.tex
+++ b/report/experimental.tex
@@ -77,3 +77,13 @@ level languages, such as C or C++.
 	\caption{Duration of HIPv2 BEX}
 	\label{fig:duration_bex}
 \end{figure}
+
+Finally, we have measured throughput for TCP connections over IPSec tunnel and plain TCP. We have used
+\texttt{iperf} tool to measure throughput. Clearly, our implementation of IPSec allows to achieve
+throughput over $15$ times less, than throughput for plain TCP connections.
+
+\begin{figure}
+	\includegraphics[width=0.5\textwidth]{graphics/throughput.pdf}
+	\caption{Obtained throughput for TCP over IPSec and plain TCP connections}
+	\label{fig:throughput}
+\end{figure}
