--- a/report/experimental.tex
+++ b/report/experimental.tex
@@ -80,7 +80,7 @@ level languages, such as C or C++.
 
 Finally, we have measured throughput for TCP connections over IPSec tunnel and plain TCP. We have used
 \texttt{iperf} tool to measure throughput. Clearly, with our implementation we were able to achieve
-throughput slightly $15$ times less, than throughput, which we have achieved for plain TCP connections.
+throughput slightly $25$ times less, than throughput, which we have obtained for plain TCP connections.
 
 \begin{figure}
 	\includegraphics[width=0.5\textwidth]{graphics/throughput.pdf}
