--- a/report/background.tex
+++ b/report/background.tex
@@ -43,7 +43,9 @@ plus payload encryption mechanism. To establish the security association (negoti
 secret keys and algorithms) one can use IKE or IKEv2, ISAKMP (popular on Windows) or
 use preshared keys and set of negotiated algorithms.
 
-{\bf Internet Key Exchange protocol (IKE)}
+{\bf Internet Key Exchange protocol (IKE)} is a protocol used in IPSec to establish
+security association, just like HIP. Unlike HIP, however, IKE does not solve the 
+dual problem of the IP address.
 
 {\bf Mobile TCP (mTCP)} There are a lot of solutions for mobility support. 
 For sampling see Mobile IP, ROAMIP and Cellular IP.
