--- a/report/intro.tex
+++ b/report/intro.tex
@@ -3,9 +3,11 @@
 
 Sometimes it is easier to implement prototypes in userspace 
 using high-level languages, such as Python or Java. In this 
-document we attempt to implement the Host Identity Protocol 
-version 2 using Python language. In the first part, we describe
-various security solutions, then we discuss some implementation
-details of the HIP protocol, and finally, in the last part
-of this work we discuss the performance of the HIP and IPSec 
-protocols.
+document we attempt to describe our implementation effort 
+related to Host Identity Protocol version 2. In the first 
+part, we describe various security solutions, then we 
+discuss some implementation details of the HIP protocol, 
+and finally, in the last part of this work we discuss the 
+performance of the HIP and IPSec protocols implemented using 
+Python language.
+
