--- a/report/conclusions.tex
+++ b/report/conclusions.tex
@@ -1,8 +1,8 @@
 \section{Conclusions}
 \label{section:conclusion}
 
-In this short document we have discussed the implementation 
-details of Host Identity Protocol (HIP), which as a layer $3.5$ 
+In this short article we have discussed the implementation 
+details of Host Identity Protocol (HIP), which is a layer $3.5$ 
 security solution aiming at separation of dual role of an IP
 address. HIP protocol not only solves the problem of separation
 of roles of the IP addresses, but can also be a secure mobility
@@ -12,9 +12,11 @@ entities, to securing mobile users.
 
 We have created a minimal Python-based implementation of HIP and 
 experimented with it: (i) we have made several microbanchmarkings, and (ii)
-we completed several rounds of stress tests of the solution (
-basically, we have made several concurrent connections to HIP
-server and measured duration of HIP base exchange). We have also 
-implemented Encapsulated Secure Payload (ESP) for IPSec and 
+we completed several rounds of stress tests of the solution. 
+We have also implemented Encapsulated Secure Payload (ESP) for IPSec and 
 measured overall performance by performing several rounds of 
-bandwidth measurements using \texttt{iperf} tool.
+bandwidth measurements using \texttt{iperf} tool. 
+
+We hope that the implementation of HIP will be useful and interesting
+for other people. For that reason, we have exposed it in public 
+repository~\cite{impl}.
