--- a/report/hardware.tex
+++ b/report/hardware.tex
@@ -7,4 +7,7 @@ processor, $16$ GB of Random Access Memory (RAM) and $500$ GB
 hard disk drive. The responder was less capable Raspberry PI 
 microcontroller, but had quad core CPU each running at $1.0$ GHz, 
 $1$ GB of RAM and a flash card for durable storage. For software 
-we have used Ubuntu 18.04 on initiator, and Raspbian OS - on responder.
+we have used Ubuntu 18.04 on initiator, and Raspbian OS on the responder.
+
+We have exposed our implmementation of the HIPv2 protocol in GitHub repository.
+Interested readers can find it here~\cite{impl}.
