--- a/report/mybib.bib
+++ b/report/mybib.bib
@@ -1,14 +1,15 @@
-@inproceedings{dummy,
-	title = {{Some article}},
-	author = "Mister who",
-	year = "2019",
-	pages = "x--y"
-}
-
 @misc{RFC5903,
 	title = {{Elliptic Curve Groups modulo a Prime (ECP Groups) for IKE and IKEv2}},
 	author = {{D. Fu and J. Solinas}},
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc5903}},
 	year = 2010
+}
+
+@misc{RFC7401,
+	title = {{Host Identity Protocol Version 2 (HIPv2)}},
+	author = {{R. Moskowitz, T. Heer, P. Jokela, T. Henderson}},
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc7401}},
+	year = 2015
 }
 
 @book{stinson,
@@ -20,7 +21,95 @@
 	publisher = {CRC/C\&H},
 } 
 
-@misc{ssh,
-	title="Secure Shell",
-	howpublished={{\url{https://en.wikipedia.org/wiki/Secure_Shell}}}
+@book{ssh,
+	author = {Barrett, Daniel J. and Silverman, Richard E. and Byrnes, Robert G.},
+	title = {{SSH, the Secure Shell: The Definitive Guide}},
+	year = {2005},
+	isbn = {0596008953},
+	publisher = {O'Reilly Media, Inc.}
+}
+
+@book{hip,
+	author = {Gurtov, Andrei},
+	title = {{Host Identity Protocol (HIP): Towards the Secure Mobile Internet}},
+	year = {{2008}},
+	isbn = {978-0-470-99790-1},
+	publisher = {Wiley Series on Communications Networking and Distributed Systems. Wiley}
+}
+
+@misc{impl,
+	title = {{CuteHIP: Python implementation of Host Identity Protocol}},
+	author = {{D. Kuptsov}},
+	year = 2021,
+	howpublished = {\url{https://github.com/dmitriykuptsov/cutehip}}
+}
+
+@misc{rfc5996,
+	title = {{Internet Key Exchange Protocol Version 2 (IKEv2)}},
+	author = {{C. Kaufman, P. Hoffman, Y. Nir, P. Eronen}},
+	year = 2010,
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc5996}}
+}
+
+@misc{rfc6101,
+	title = {{The Secure Sockets Layer (SSL) Protocol Version 3.0}},
+	author = {{A. Freier, P. Karlton, P. Kocher}},
+	year = 2011,
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc6101}}
+}
+
+@misc{rfc6830,
+	title = {{The Locator/ID Separation Protocol (LISP)}},
+	author = {{D. Farinacci, V. Fuller, D. Meyer, D. Lewis}},
+	year = 2013,
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc6830}}
+}
+
+@misc{rfc6740,
+	title = {{Identifier-Locator Network Protocol (ILNP) Architectural Description}},
+	author = {{RJ Atkinson, SN Bhatti}},
+	year = 2012,
+	howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc6740}}
+}
+
+@misc{vpn,
+	title = {{Bypassing Deep Packet Inspection: Tunneling Traffic Over TLS VPN}},
+	author = {{D. Kuptsov}},
+	year = 2021,
+	howpublished = {\url{https://www.linuxjournal.com/content/bypassing-deep-packet-inspection-tunneling-traffic-over-tls-vpn}}
+}
+
+@misc{crypto,
+	title = {{PyCryptodome}},
+	year = 2021,
+	howpublished = {\url{https://pycryptodome.readthedocs.io/en/latest/}}
+}
+
+@book{ipsec,
+	author = {Doraswamy, Naganand and Harkins, Dan},
+	title = {{IPSec: The New Security Standard for the Internet, Intranets, and Virtual Private Networks}},
+	year = {1999},
+	isbn = {0130118982},
+	publisher = {Prentice Hall PTR},
+	address = {USA},
+}
+
+@misc{rfc5944,
+	author = {C. Perkins},
+	title = {{IP Mobility Support for IPv4, Revised}},
+	howpublished = {{https://datatracker.ietf.org/doc/html/rfc5944}}
+	year = 2010
+}
+
+@misc{rfc6275,
+	author = {C. Perkins, D. Johnson, J. Arkko},
+	title = {{Mobility Support in IPv6}},
+	howpublished = {{https://datatracker.ietf.org/doc/html/rfc6275}}
+	year = 2010
+}
+
+@misc{iperf,
+	title = {{iPerf - The ultimate speed test tool for TCP, UDP and SCTP}},
+	howpublished = {\url{https://iperf.fr/}},
+	year = 2021
 }
