--- a/report/background.tex
+++ b/report/background.tex
@@ -82,7 +82,7 @@ In SSL the communicating hosts can authenticate each other with help of
 longer term identities - public key certificates.
 
 Although, the solutions which we have listed above do solve security problems
-at various layers of the OSI model, they are not designed to deal with node 
+at various layers of the OSI~\cite{osi} model, they are not designed to deal with node 
 mobility. We, therefore, in the paragraphs that follow, list several protocols,
 which were designed specifically to support mobility and solve the dual role of 
 an IP address.
