--- a/report/mybib.bib
+++ b/report/mybib.bib
@@ -113,3 +113,9 @@
 	howpublished = {\url{https://iperf.fr/}},
 	year = 2021
 }
+
+@misc{osi,
+	title = {{OSI model}},
+	howpublished = {\url{https://en.wikipedia.org/wiki/OSI_model}},
+	year = 2021
+}
